--- a/boys.html
+++ b/boys.html
@@ -689,58 +689,58 @@ $(document).ready(function() {
 	<div class="analysis-container">
 		<div class="analysis-block">
 			<div class="analysis-symbol">A</div>
-			<div class="analysis-stats"><div>SUN</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>SUN</div><div>SCORPIO, 19°41'50"</div><div>FIRST HOUSE</div></div>
+			<div class="analysis-analysis">The sun determines your ego, identity, and "role" in life. It's the core of who you are, and is the sign you're most likely to already know. Your Sun is in Scorpio, meaning you have a fundamental urge to get to the bottom of things, which can at times lead you to be manipulative or power-hungry, but it comes down to an intense passion for authenticity, real intimacy, and the truth. It's in your first house, meaning you feel the need to distinguish yourself from others through your self and self-image—and, because it's your first house, your Sun in Scorpio is hyper-present in your personality.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">P</div>
-			<div class="analysis-stats"><div>ASCENDANT</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>ASCENDANT</div><div>SCORPIO, 18°38'55"</div><div>FIRST HOUSE</div></div>
+			<div class="analysis-analysis">Your ascendant is the "mask" you present to people. It can be seen in your personal style and how you come off to people when you first meet. Some say it becomes less relevant as you get older. It changes every two hours, so if it doesn't make sense, text your mom to confirm your birth time. Your Ascendant is in Scorpio, meaning you come across as passionate, incisive, cunning, strategic, and perceptive. Your intense and tenacious drive comes off as intimidating and powerful if not malicious or aggressive.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">B</div>
-			<div class="analysis-stats"><div>MOON</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MOON</div><div>PISCES, 14°3'27"</div><div>FOURTH HOUSE</div></div>
+			<div class="analysis-analysis">The moon rules your emotions, moods, and feelings. This is likely the sign you most think of yourself as, since it reflects your personality when you're alone or deeply comfortable. Your Moon is in Pisces, meaning your emotional self is empathetic, dreamy, sensitive, and gentle. You feel vulnerable much of the time, and desperately wish for a partner who deeply understands you. It's in your fourth house, meaning you find security and safety through your home and family.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">C</div>
-			<div class="analysis-stats"><div>MERCURY</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MERCURY</div><div>SCORPIO, 2°27'51"</div><div>TWELFTH HOUSE</div></div>
+			<div class="analysis-analysis">Mercury determines how you communicate, talk, think, and process information. It also indicates how you learn. It is the mind's planet. Your Mercury is in Scorpio, meaning your intellect is intense, serious, and obsessive. You have tendency to see things that others don't through your perceptive and insightful intuition. You don't take things lightly and like to get straight to the point, which can come off as harsh, suspicious, or intrusive. You tend to communicate through your body language. It's in your twelfth house, meaning you are curious about and inclined to analyze your secrets, dreams, and mental health.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">D</div>
-			<div class="analysis-stats"><div>VENUS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>VENUS</div><div>SCORPIO, 5°7'22"</div><div>TWELFTH HOUSE</div></div>
+			<div class="analysis-analysis">Venus determines how and what you love. It indicates how you express affection and the qualities you're attracted to. Your Venus is in Scorpio, meaning your romantic side is mysterious, passionate, and seductive. The intense depths of your devotion make for a mad and boundless love, though they may sometimes mutate into suspicion, jealousy, and cruelty, making your love life somewhat tumultuous. It's in your twelfth house, meaning that for you, love is often expressed in privacy, secrets, and introspection.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">E</div>
-			<div class="analysis-stats"><div>MARS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MARS</div><div>LEO, 19°36'5"</div><div>NINTH HOUSE</div></div>
+			<div class="analysis-analysis">Mars is the planet of aggression. It determines how you assert yourself, take action, and the energy that surrounds you—particularly in your sex life, your ambitiousness, and when you're angry. Your Mars is in Leo, meaning you assert yourself in a way that is authoritative and persuasive, and you push things forward with confidence and gusto. It's in your ninth house, meaning you put a lot of energy into philosophy, faith, education, and politics.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">F</div>
-			<div class="analysis-stats"><div>JUPITER</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>JUPITER</div><div>SCORPIO, 24°1'14"</div><div>FIRST HOUSE</div></div>
+			<div class="analysis-analysis">One of the two social planets, Jupiter rules idealism, optimism, and expansion. It's also very philosophical. Your Jupiter is in Scorpio, meaning you grow and find understanding through passion, intensity, and finding the deep heart of things. It's in your first house, meaning you find success through your self and self-image—and, because it's your first house, your Jupiter in Scorpio is hyper-present in your personality.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">G</div>
-			<div class="analysis-stats"><div>SATURN</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>SATURN</div><div>PISCES, 5°40'56"</div><div>THIRD HOUSE</div></div>
+			<div class="analysis-analysis">The other social planet, Saturn rules responsibility, restrictions, limits, boundaries, fears, and self-discipline. Your Saturn is in Pisces, meaning you struggle with your tendency to be pushover, daydreaming, and your emotions. It's in your third house, meaning you have had difficulties with the things you know and are familiar with.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">H</div>
-			<div class="analysis-stats"><div>URANUS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>URANUS</div><div>CAPRICORN, 23°6'2"</div><div>SECOND HOUSE</div></div>
+			<div class="analysis-analysis">Uranus stays in each sign for seven years, meaning it rules a generation more than a person. It rules innovation, rebellion, and progress. Your Uranus is in Capricorn, meaning other generations are shocked by your generation's sense of responsibility, seriousness, rationality, and hunger for power. It's in your second house, meaning that for you, this manifests in rebelling against dated expectations about money and material possessions.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">I</div>
-			<div class="analysis-stats"><div>NEPTUNE</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>NEPTUNE</div><div>CAPRICORN, 21°1'37"</div><div>SECOND HOUSE</div></div>
+			<div class="analysis-analysis">Neptune stays in each sign for around fourteen years, meaning it rules a generation more than a person. It rules dreams, imagination, and the unconscious. Your Neptune is in Capricorn, meaning your entire generation finds inspiration through hard work, responsibility, seriousness, and ambition. It's in your second house, meaning that for you, this manifests in your ideal—verging on unrealistic and impractical—about money and material possessions.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">J</div>
-			<div class="analysis-stats"><div>PLUTO</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>PLUTO</div><div>SCORPIO, 27°38'43"</div><div>FIRST HOUSE</div></div>
+			<div class="analysis-analysis">Pluto stays in each sign for up to thirty years, meaning it rules a generation more than a person. It rules power, intensity, obsession, and control. Your Pluto is in Scorpio, meaning your generation's psyche is comparatively passionate, intense, serious, private, self-obsessed, and perceptive. It's in your first house, meaning you personally are transforming your self and self-image—and, because it's your first house, your Pluto in Scorpio is hyper-present in your personality.</div>
 		</div> 
 	</div>
   </div>
