--- a/boys.html
+++ b/boys.html
@@ -748,58 +748,58 @@ $(document).ready(function() {
 	<div class="analysis-container">
 		<div class="analysis-block">
 			<div class="analysis-symbol">A</div>
-			<div class="analysis-stats"><div>SUN</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>SUN</div><div>LEO, 6°17'38"</div><div>EIGHTH HOUSE</div></div>
+			<div class="analysis-analysis">The sun determines your ego, identity, and "role" in life. It's the core of who you are, and is the sign you're most likely to already know. Your Sun is in Leo, meaning you are fundamentally bold and proud. You love attention and to be cared for. You pay it back in kind with your charm and your ability to make people feel better when they're blue. You know what your skills are and how to use them. It's in your eighth house, meaning you feel the need to distinguish yourself from others through darkness, taboos, rebirth, sex, and transformation.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">P</div>
-			<div class="analysis-stats"><div>ASCENDANT</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>ASCENDANT</div><div>SAGITTARIUS, 6°10'34"</div><div>FIRST HOUSE</div></div>
+			<div class="analysis-analysis">Your ascendant is the "mask" you present to people. It can be seen in your personal style and how you come off to people when you first meet. Some say it becomes less relevant as you get older. It changes every two hours, so if it doesn't make sense, text your mom to confirm your birth time. Your Ascendant is in Sagittarius, meaning you come across as independent, optimistic, and confident, though sometimes overly blunt or critical. Generally a charming conversationalist, your free-spirited approach may come off as restless or easily bored.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">B</div>
-			<div class="analysis-stats"><div>MOON</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MOON</div><div>SCORPIO, 7°22'22"</div><div>ELEVENTH HOUSE</div></div>
+			<div class="analysis-analysis">The moon rules your emotions, moods, and feelings. This is likely the sign you most think of yourself as, since it reflects your personality when you're alone or deeply comfortable. Your Moon is in Scorpio, meaning your emotional self is intense, passionate, and a bit dramatic. You have trouble opening up and letting other people in, and try to keep your intense darker emotions private. You find it difficult to trust others, which means your powers of perception may manifest in suspicion and controlling tendencies. It's in your eleventh house, meaning you find security and safety through your friendships, social life, and social status.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">C</div>
-			<div class="analysis-stats"><div>MERCURY</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MERCURY</div><div>VIRGO, 0°18'54"</div><div>NINTH HOUSE</div></div>
+			<div class="analysis-analysis">Mercury determines how you communicate, talk, think, and process information. It also indicates how you learn. It is the mind's planet. Your Mercury is in Virgo, meaning your intellect is analytical, precise, and diligent. Your unbiased sense of logic can make you seem a bit clinical—you have a tendency to be nitpicky and point out what's wrong rather than what's right. You're a planner and pay attention to the details. It's in your ninth house, meaning you are curious about and inclined to analyze what you believe in, what and how to learn, politics, philosophy, and your personal ethics.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">D</div>
-			<div class="analysis-stats"><div>VENUS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>VENUS</div><div>CANCER, 11°29'36"</div><div>SEVENTH HOUSE</div></div>
+			<div class="analysis-analysis">Venus determines how and what you love. It indicates how you express affection and the qualities you're attracted to. Your Venus is in Cancer, meaning your romantic side is gentle, thoughtful, and sentimental. You love being tender, kind, and nurturing to the people you love. You're intensely loyal, but this may stem from a fear of rejection. It's in your seventh house, meaning that for you, love is often expressed in close relationships and long-term partnerships.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">E</div>
-			<div class="analysis-stats"><div>MARS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MARS</div><div>TAURUS, 11°11'23"</div><div>FIFTH HOUSE</div></div>
+			<div class="analysis-analysis">Mars is the planet of aggression. It determines how you assert yourself, take action, and the energy that surrounds you—particularly in your sex life, your ambitiousness, and when you're angry. Your Mars is in Taurus, meaning you assert yourself in a way that is practical, concrete, and relaxed, and you push things forward stubbornly. You rarely make the first move. It's in your fifth house, meaning you put a lot of energy into romance, self-expression, creativity, and pleasure.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">F</div>
-			<div class="analysis-stats"><div>JUPITER</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>JUPITER</div><div>CANCER, 25°43'21"</div><div>EIGHTH HOUSE</div></div>
+			<div class="analysis-analysis">One of the two social planets, Jupiter rules idealism, optimism, and expansion. It's also very philosophical. Your Jupiter is in Cancer, meaning you grow and find understanding through emotions, intuition, and care. It's in your eighth house, meaning you find success through sexuality and transformation.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">G</div>
-			<div class="analysis-stats"><div>SATURN</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>SATURN</div><div>CAPRICORN, 20°55'26"</div><div>SECOND HOUSE</div></div>
+			<div class="analysis-analysis">The other social planet, Saturn rules responsibility, restrictions, limits, boundaries, fears, and self-discipline. Your Saturn is in Capricorn, meaning you struggle with your sense of responsibility, ambition, conservatism, repressed emotions, and obsessions with money and power. It's in your second house, meaning you have had difficulties with money and material possessions.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">H</div>
-			<div class="analysis-stats"><div>URANUS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>URANUS</div><div>CAPRICORN, 6°26'42"</div><div>FIRST HOUSE</div></div>
+			<div class="analysis-analysis">Uranus stays in each sign for seven years, meaning it rules a generation more than a person. It rules innovation, rebellion, and progress. Your Uranus is in Capricorn, meaning other generations are shocked by your generation's sense of responsibility, seriousness, rationality, and hunger for power. It's in your first house, meaning that for you, this manifests in rebelling against dated expectations about your self and self-image—and, because it's your first house, your Uranus in Capricorn is hyper-present in your personality.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">I</div>
-			<div class="analysis-stats"><div>NEPTUNE</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>NEPTUNE</div><div>CAPRICORN, 12°33'0"</div><div>FIRST HOUSE</div></div>
+			<div class="analysis-analysis">Neptune stays in each sign for around fourteen years, meaning it rules a generation more than a person. It rules dreams, imagination, and the unconscious. Your Neptune is in Capricorn, meaning your entire generation finds inspiration through hard work, responsibility, seriousness, and ambition. It's in your first house, meaning that for you, this manifests in your ideal—verging on unrealistic and impractical—about your self and self-image—and, because it's your first house, your Neptune in Capricorn is hyper-present in your personality.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">J</div>
-			<div class="analysis-stats"><div>PLUTO</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>PLUTO</div><div>SCORPIO, 14°58'1"</div><div>ELEVENTH HOUSE</div></div>
+			<div class="analysis-analysis">Pluto stays in each sign for up to thirty years, meaning it rules a generation more than a person. It rules power, intensity, obsession, and control. Your Pluto is in Scorpio, meaning your generation's psyche is comparatively passionate, intense, serious, private, self-obsessed, and perceptive. It's in your eleventh house, meaning you personally are transforming outdated standards of friendship and social status.</div>
 		</div> 
 	</div>
   </div>
