--- a/boys.html
+++ b/boys.html
@@ -74,7 +74,7 @@ $(document).ready(function() {
     <a href="#"><i class="fab fa-tumblr"></i></a>
   </div>
   <div id="navigation">
-    <span class="lactive"><a href="/index.html">home page</a></span>
+    <span class="lactive"><a href="/index2.html">home page</a></span>
     <span><a class="nolink">the boys</a></span>
     <span class="lactive"><a href="/ships.html">the ships</a></span>
   </div>
