--- a/ships.html
+++ b/ships.html
@@ -21,7 +21,7 @@
     <a href="#"><i class="fab fa-tumblr"></i></a>
   </div>
   <div id="navigation">
-    <span class="lactive"><a href="/index.html">home page</a></span>
+    <span class="lactive"><a href="/index2.html">home page</a></span>
     <span class="lactive"><a href="/boys.html">the boys</a></span>
     <span><a class="nolink">the ships</a></span>
   </div>
