--- a/nsfwmeme.html
+++ b/nsfwmeme.html
@@ -5,7 +5,7 @@
     <script>
     // init Isotope
 var $grid = $('.grid').isotope({
-  itemSelector: '.nsfwmeme'
+  itemSelector: '.color-shape'
 });
 
 // store filter for each group
@@ -137,27 +137,27 @@ body {
 
 /* color-shape */
 
-.nsfwmeme {
+.color-shape {
   width: 70px;
   height: 70px;
   margin: 5px;
   float: left;
 }
  
-.nsfwmeme.round {
+.color-shape.round {
   border-radius: 35px;
 }
  
-.nsfwmeme.big.round {
+.color-shape.big.round {
   border-radius: 75px;
 }
  
-.nsfwmeme.red { background: red; }
-.nsfwmeme.blue { background: blue; }
-.nsfwmeme.yellow { background: yellow; }
+.color-shape.red { background: red; }
+.color-shape.blue { background: blue; }
+.color-shape.yellow { background: yellow; }
  
-.nsfwmeme.wide, .nsfwmeme.big { width: 150px; }
-.nsfwmeme.tall, .nsfwmeme.big { height: 150px; }
+.color-shape.wide, .color-shape.big { width: 150px; }
+.color-shape.tall, .color-shape.big { height: 150px; }
     </style>
   </head>
   <body>
@@ -199,30 +199,30 @@ body {
 </div>
 
 <div class="grid">
-  <div class="nsfwmeme small round red"></div>
-  <div class="nsfwmeme small round blue"></div>
-  <div class="nsfwmeme small round yellow"></div>
-  <div class="nsfwmeme small square red"></div>
-  <div class="nsfwmeme small square blue"></div>
-  <div class="nsfwmeme small square yellow"></div>
-  <div class="nsfwmeme wide round red"></div>
-  <div class="nsfwmeme wide round blue"></div>
-  <div class="nsfwmeme wide round yellow"></div>
-  <div class="nsfwmeme wide square red"></div>
-  <div class="nsfwmeme wide square blue"></div>
-  <div class="nsfwmeme wide square yellow"></div>
-  <div class="nsfwmeme big round red"></div>
-  <div class="nsfwmeme big round blue"></div>
-  <div class="nsfwmeme big round yellow"></div>
-  <div class="nsfwmeme big square red"></div>
-  <div class="nsfwmeme big square blue"></div>
-  <div class="nsfwmeme big square yellow"></div>
-  <div class="nsfwmeme tall round red"></div>
-  <div class="nsfwmeme tall round blue"></div>
-  <div class="nsfwmeme tall round yellow"></div>
-  <div class="nsfwmeme tall square red"></div>
-  <div class="nsfwmeme tall square blue"></div>
-  <div class="nsfwmeme tall square yellow"></div>
+  <div class="color-shape small round red"></div>
+  <div class="color-shape small round blue"></div>
+  <div class="color-shape small round yellow"></div>
+  <div class="color-shape small square red"></div>
+  <div class="color-shape small square blue"></div>
+  <div class="color-shape small square yellow"></div>
+  <div class="color-shape wide round red"></div>
+  <div class="color-shape wide round blue"></div>
+  <div class="color-shape wide round yellow"></div>
+  <div class="color-shape wide square red"></div>
+  <div class="color-shape wide square blue"></div>
+  <div class="color-shape wide square yellow"></div>
+  <div class="color-shape big round red"></div>
+  <div class="color-shape big round blue"></div>
+  <div class="color-shape big round yellow"></div>
+  <div class="color-shape big square red"></div>
+  <div class="color-shape big square blue"></div>
+  <div class="color-shape big square yellow"></div>
+  <div class="color-shape tall round red"></div>
+  <div class="color-shape tall round blue"></div>
+  <div class="color-shape tall round yellow"></div>
+  <div class="color-shape tall square red"></div>
+  <div class="color-shape tall square blue"></div>
+  <div class="color-shape tall square yellow"></div>
 </div>
     
   </body>
