--- a/nsfwmeme.html
+++ b/nsfwmeme.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>NSFW Meme</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script>
     // init Isotope
