--- a/nsfwmeme.html
+++ b/nsfwmeme.html
@@ -5,7 +5,12 @@
   </head>
   <body>
     
-  nsfw meme!
+  nsfw meme!<p>
+  list questions<p>
+  FILTERS:<br>
+    gender: male, female<br>
+    generation: gen1, gen2<br>
+    name: list of each character
     
   </body>
 </html>
