--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
   
   <div id="index-container">
-  hello main page
+  <div id="index-sidebar"> xx </div>
+  <div id="index-content"> hello site! </div>
   </div>
   
 </body>
