--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
   
   <div id="index-container">
-  <div id="index-sidebar"> xx </div>
+  <div id="index-sidebar">
+    <div class="sidebar-ico" id="home-btn">ho</div>
+    <div class="sidebar-ico" id="totop-btn">^</div>
+    <div class="sidebar-ico" id="tobtm-btn">v</div>
+  </div>
   <div id="index-content"> hello site! </div>
   </div>
   
