--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Vidaloka&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/fae657cb20.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="/css/main.css">
-  <link rel="stylesheet" type="text/css" href="">
+  <link rel="stylesheet" type="text/css" href="/css/indexcss.css">
 </head>
 <body>
   
@@ -18,7 +18,12 @@
     <div class="sidebar-ico" id="totop-btn">^</div>
     <div class="sidebar-ico" id="tobtm-btn">v</div>
   </div>
-  <div id="index-content"> hello site! </div>
+  <div id="index-content">
+  
+    <div id="idx-header">yo hello</div>
+    hello more!
+    
+  </div>
   </div>
   
 </body>
