--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
   <div id="index-content">
   
     <div id="idx-header">
-      yo hello
+      <div id="ih-illustration">
+        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+        <path fill="#98BFA2" d="M46.9,-14.7C51.1,-2.5,38,15.9,19.7,29.7C1.5,43.6,-21.9,53,-32.4,45.2C-43,37.4,-40.6,12.5,-33.1,-4.4C-25.5,-21.2,-12.8,-30,4.3,-31.4C21.4,-32.8,42.8,-26.8,46.9,-14.7Z" transform="translate(100 100)" />
+        </svg>
       <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-  <path fill="#98BFA2" d="M46.9,-14.7C51.1,-2.5,38,15.9,19.7,29.7C1.5,43.6,-21.9,53,-32.4,45.2C-43,37.4,-40.6,12.5,-33.1,-4.4C-25.5,-21.2,-12.8,-30,4.3,-31.4C21.4,-32.8,42.8,-26.8,46.9,-14.7Z" transform="translate(100 100)" />
-</svg>
-      <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-  <path fill="#A7C096" d="M51.6,-15.8C60,9.1,55.3,39.3,35.6,55C16,70.7,-18.5,71.8,-39.3,56.2C-60.1,40.6,-67.1,8.3,-58.3,-17.3C-49.5,-42.8,-24.7,-61.4,-1.6,-60.9C21.6,-60.4,43.2,-40.7,51.6,-15.8Z" transform="translate(100 100)" />
-</svg>
+      <path fill="#A7C096" d="M51.6,-15.8C60,9.1,55.3,39.3,35.6,55C16,70.7,-18.5,71.8,-39.3,56.2C-60.1,40.6,-67.1,8.3,-58.3,-17.3C-49.5,-42.8,-24.7,-61.4,-1.6,-60.9C21.6,-60.4,43.2,-40.7,51.6,-15.8Z" transform="translate(100 100)" />
+      </svg>
+      <img src="https://img.nickpic.host/ADVvqe.png" class="ih-img" />
+      </div>
+      <div id="ih-text">hi words!</div>
     </div>
     hello more!
     
