--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </svg></div>
       <img src="https://img.nickpic.host/ADVvqe.png" class="ih-img" />
       </div>
-      <div id="ih-text">hi words!</div>
+      <div id="ih-text"><div>#MAEDAE</div><span>tagline says something</span></div>
     </div>
     hello more!
     
