--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
   
   <div id="index-container">
-  <div id="index-sidebar">
+  <div id="index-sidebar"><div id="s-stick">
     <div class="sidebar-ico" id="home-btn">ho</div>
     <div class="sidebar-ico" id="totop-btn">^</div>
     <div class="sidebar-ico" id="tobtm-btn">v</div>
-  </div>
+  </div></div>
   <div id="index-content">
   
     <div id="idx-header">
