--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
   
   <div id="index-container">
-  <div id="index-sidebar"><div id="s-stick">
+  <div id="index-sidebar">
     <div class="sidebar-ico" id="home-btn">ho</div>
     <div class="sidebar-ico" id="totop-btn">^</div>
     <div class="sidebar-ico" id="tobtm-btn">v</div>
-  </div></div>
-  <div id="index-content">
+  </div>
+  <div id="index-content"><div id="content-wrapper">
   
     <div id="idx-header">
       <div id="ih-illustration">
@@ -34,7 +34,7 @@
     </div>
     hello more!
     
-  </div>
+  </div></div>
   </div>
   
 </body>
