--- a/index.html
+++ b/index.html
@@ -36,29 +36,29 @@
     <div id="idx-characters">
       <div class="ch-maintitle"><span>meet the</span>FIRST GENERATION</div>
       <div class="ch-generation1">
-      <div class="ch-block" id="ch-harvey">hello harvey</div>
-      <div class="ch-block" id="ch-mouse">hello mouse</div>
-      <div class="ch-block" id="ch-bird">hello bird</div>
-      <div class="ch-block" id="ch-roman">hello roman</div>
-      <div class="ch-block" id="ch-june">hello june</div>
-      <div class="ch-block" id="ch-jay">hello jay</div>
-      <div class="ch-block" id="ch-val">hello val</div>
-      <div class="ch-block" id="ch-pawn">hello pawn</div>
-      <div class="ch-block" id="ch-tai">hello tai</div>
-      <div class="ch-block" id="ch-kevin">hello kevin</div>
-      <div class="ch-block" id="ch-del">hello del</div>
-      <div class="ch-block" id="ch-gabe">hello gabe</div>
-      <div class="ch-block" id="ch-orion">hello orion</div>
+      <div class="ch-block ch-square" id="ch-harvey">hello harvey</div>
+      <div class="ch-block ch-square" id="ch-mouse">hello mouse</div>
+      <div class="ch-block ch-square" id="ch-bird">hello bird</div>
+      <div class="ch-block ch-rectangle" id="ch-roman">hello roman</div>
+      <div class="ch-block ch-rectangle" id="ch-june">hello june</div>
+      <div class="ch-block ch-rectangle" id="ch-jay">hello jay</div>
+      <div class="ch-block ch-rectangle" id="ch-val">hello val</div>
+      <div class="ch-block ch-rectangle" id="ch-pawn">hello pawn</div>
+      <div class="ch-block ch-rectangle" id="ch-tai">hello tai</div>
+      <div class="ch-block ch-rectangle" id="ch-kevin">hello kevin</div>
+      <div class="ch-block ch-rectangle" id="ch-del">hello del</div>
+      <div class="ch-block ch-rectangle" id="ch-gabe">hello gabe</div>
+      <div class="ch-block ch-rectangle" id="ch-orion">hello orion</div>
       </div>
       
       <div class="ch-maintitle"><span>meet the</span>SECOND GENERATION</div>
       <div class="ch-generation2">
-      <div class="ch-block" id="ch-mateo">hello mateo</div>
-      <div class="ch-block" id="ch-tj">hello tj</div>
-      <div class="ch-block" id="ch-miri">hello miri</div>
-      <div class="ch-block" id="ch-avery">hello avery</div>
-      <div class="ch-block" id="ch-aug">hello aug</div>
-      <div class="ch-block" id="ch-valley">hello valley</div>
+      <div class="ch-block ch-rectangle" id="ch-mateo">hello mateo</div>
+      <div class="ch-block ch-rectangle" id="ch-tj">hello tj</div>
+      <div class="ch-block ch-rectangle" id="ch-miri">hello miri</div>
+      <div class="ch-block ch-rectangle" id="ch-avery">hello avery</div>
+      <div class="ch-block ch-rectangle" id="ch-aug">hello aug</div>
+      <div class="ch-block ch-rectangle" id="ch-valley">hello valley</div>
       </div>
     </div>
     
