--- a/index.html
+++ b/index.html
@@ -36,9 +36,39 @@
     <div id="idx-characters">
       <div class="ch-maintitle"><span>meet the</span>FIRST GENERATION</div>
       <div class="ch-generation1">
-      <div class="ch-block ch-square" id="ch-harvey">hello harvey</div>
-      <div class="ch-block ch-square" id="ch-mouse">hello mouse</div>
-      <div class="ch-block ch-square" id="ch-bird">hello bird</div>
+      <div class="ch-block ch-square" id="ch-harvey">
+        <div class="s-bg"> </div>
+        <div class="s-aes"> </div>
+        <div class="s-ico"> </div>
+        <div class="s-first"> HARVEY </div>
+        <div class="s-last"> </div>
+        <div class="s-age"> </div>
+        <div class="s-birth"> </div>
+        <div class="s-signs"> </div>
+        <div class="s-aus"> </div> 
+      </div>
+      <div class="ch-block ch-square" id="ch-mouse">
+        <div class="s-bg"> </div>
+        <div class="s-aes"> </div>
+        <div class="s-ico"> </div>
+        <div class="s-first"> MOUSE </div>
+        <div class="s-last"> </div>
+        <div class="s-age"> </div>
+        <div class="s-birth"> </div>
+        <div class="s-signs"> </div>
+        <div class="s-aus"> </div> 
+      </div>
+      <div class="ch-block ch-square" id="ch-bird">
+        <div class="s-bg"> </div>
+        <div class="s-aes"> </div>
+        <div class="s-ico"> </div>
+        <div class="s-first"> BIRD </div>
+        <div class="s-last"> </div>
+        <div class="s-age"> </div>
+        <div class="s-birth"> </div>
+        <div class="s-signs"> </div>
+        <div class="s-aus"> </div> 
+      </div>
       <div class="ch-block ch-rectangle" id="ch-roman">hello roman</div>
       <div class="ch-block ch-rectangle" id="ch-june">hello june</div>
       <div class="ch-block ch-rectangle" id="ch-jay">hello jay</div>
