--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="ch-block ch-square" id="ch-harvey">
         <div class="s-bg"> </div>
         <div class="s-aes"> </div>
-        <div class="s-ico"> </div>
+        <div class="s-ico"> <div></div> </div>
         <div class="s-first"> HARVEY </div>
         <div class="s-last"> </div>
         <div class="s-age"> </div>
@@ -50,7 +50,7 @@
       <div class="ch-block ch-square" id="ch-mouse">
         <div class="s-bg"> </div>
         <div class="s-aes"> </div>
-        <div class="s-ico"> </div>
+        <div class="s-ico"> <div></div> </div>
         <div class="s-first"> MOUSE </div>
         <div class="s-last"> </div>
         <div class="s-age"> </div>
@@ -61,7 +61,7 @@
       <div class="ch-block ch-square" id="ch-bird">
         <div class="s-bg"> </div>
         <div class="s-aes"> </div>
-        <div class="s-ico"> </div>
+        <div class="s-ico"> <div></div> </div>
         <div class="s-first"> BIRD </div>
         <div class="s-last"> </div>
         <div class="s-age"> </div>
