--- a/index.html
+++ b/index.html
@@ -41,33 +41,33 @@
         <div class="s-aes"> </div>
         <div class="s-ico"> <div></div> </div>
         <div class="s-first"> HARVEY </div>
-        <div class="s-last"> </div>
-        <div class="s-age"> </div>
-        <div class="s-birth"> </div>
-        <div class="s-signs"> </div>
-        <div class="s-aus"> </div> 
+        <div class="s-last"> king </div>
+        <div class="s-age"> 2# </div>
+        <div class="s-birth"> 00/00/00<span>00:00XX</span> </div>
+        <div class="s-signs"> X X X </div>
+        <div class="s-aus"> au list </div> 
       </div>
       <div class="ch-block ch-square" id="ch-mouse">
         <div class="s-bg"> </div>
         <div class="s-aes"> </div>
         <div class="s-ico"> <div></div> </div>
         <div class="s-first"> MOUSE </div>
-        <div class="s-last"> </div>
-        <div class="s-age"> </div>
-        <div class="s-birth"> </div>
-        <div class="s-signs"> </div>
-        <div class="s-aus"> </div> 
+        <div class="s-last"> surname </div>
+        <div class="s-age"> 2# </div>
+        <div class="s-birth"> 00/00/00<span>00:00XX</span> </div>
+        <div class="s-signs"> X X X </div>
+        <div class="s-aus"> au list </div> 
       </div>
       <div class="ch-block ch-square" id="ch-bird">
         <div class="s-bg"> </div>
         <div class="s-aes"> </div>
         <div class="s-ico"> <div></div> </div>
         <div class="s-first"> BIRD </div>
-        <div class="s-last"> </div>
-        <div class="s-age"> </div>
-        <div class="s-birth"> </div>
-        <div class="s-signs"> </div>
-        <div class="s-aus"> </div> 
+        <div class="s-last"> surname </div>
+        <div class="s-age"> 2# </div>
+        <div class="s-birth"> 00/00/00<span>00:00XX</span> </div>
+        <div class="s-signs"> X X X </div>
+        <div class="s-aus"> au list </div>  
       </div>
       <div class="ch-block ch-rectangle" id="ch-roman">hello roman</div>
       <div class="ch-block ch-rectangle" id="ch-june">hello june</div>
