--- a/kinksheets.html
+++ b/kinksheets.html
@@ -4,13 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Roleplaying Sheet Generator</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="kinksheets.css">
 </head>
 <body>
 <div id="sheet"></div>
 <button id="exportBtn">Export as JPEG</button>
 <canvas id="canvas" style="display: none;"></canvas>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
-<script src="script.js"></script>
+<script src="kinksheets.js"></script>
 </body>
 </html>
