--- a/kinksheets.html
+++ b/kinksheets.html
@@ -7,42 +7,12 @@
     <link rel="stylesheet" href="kinksheets.css">
 </head>
 <body>
-    <div id="sheet"></div>
-
-    <div class="category" data-category="Category 1">
-        <div class="kink" data-kink="Kink 1">
-            <label><input type="radio" name="category1_kink1" value="Not Applicable"> Not Applicable</label>
-            <label><input type="radio" name="category1_kink1" value="Favourite"> Favourite</label>
-            <label><input type="radio" name="category1_kink1" value="Like"> Like</label>
-            <label><input type="radio" name="category1_kink1" value="Interested"> Interested</label>
-            <label><input type="radio" name="category1_kink1" value="No"> No</label>
-            <textarea class="explanation" placeholder="Add optional note"></textarea>
-        </div>
-        <div class="kink" data-kink="Kink 2">
-            <label><input type="radio" name="category1_kink2" value="Not Applicable"> Not Applicable</label>
-            <label><input type="radio" name="category1_kink2" value="Favourite"> Favourite</label>
-            <label><input type="radio" name="category1_kink2" value="Like"> Like</label>
-            <label><input type="radio" name="category1_kink2" value="Interested"> Interested</label>
-            <label><input type="radio" name="category1_kink2" value="No"> No</label>
-            <textarea class="explanation" placeholder="Add optional note"></textarea>
-        </div>
+    <div id="Sheet">
+        <h1>Roleplaying Sheet Generator</h1>
+        <div id="Categories"></div>
+        <button id="ExportBtn">Export as Image</button>
     </div>
 
-    <div class="category" data-category="Category 2">
-        <div class="kink" data-kink="Kink 3">
-            <label><input type="radio" name="category2_kink3" value="Not Applicable"> Not Applicable</label>
-            <label><input type="radio" name="category2_kink3" value="Favourite"> Favourite</label>
-            <label><input type="radio" name="category2_kink3" value="Like"> Like</label>
-            <label><input type="radio" name="category2_kink3" value="Interested"> Interested</label>
-            <label><input type="radio" name="category2_kink3" value="No"> No</label>
-            <textarea class="explanation" placeholder="Add optional note"></textarea>
-        </div>
-        <!-- Add more kinks as needed -->
-    </div>
-
-    <button id="exportButton">Export</button>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="kinksheets.js"></script>
 </body>
 </html>
