--- a/kinksheets.html
+++ b/kinksheets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roleplaying Sheet Generator</title>
-    <link rel="stylesheet" href="kinksheets.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="Sheet">
@@ -13,6 +13,7 @@
         <button id="ExportBtn">Export as Image</button>
     </div>
 
-    <script src="kinksheets.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
