--- a/kinksheets.html
+++ b/kinksheets.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roleplaying Sheet Generator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="kinksheets.css">
 </head>
 <body>
-    <div id="Sheet">
-        <h1>Roleplaying Sheet Generator</h1>
-        <div id="Categories"></div>
+    <div id="RoleplayingSheet">
+        <div id="Categories" class="Categories">
+            <!-- Categories and kinks will be dynamically populated here -->
+        </div>
         <button id="ExportBtn">Export as Image</button>
+    </div>
+    <div id="Sheet" style="display: none;">
+        <!-- Placeholder for the generated roleplaying sheet -->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
-    <script src="script.js"></script>
+    <script src="kinksheets.js"></script>
 </body>
 </html>
