--- a/kinksheets.html
+++ b/kinksheets.html
@@ -7,15 +7,11 @@
     <link rel="stylesheet" href="kinksheets.css">
 </head>
 <body>
-    <div id="RoleplayingSheet">
-        <div id="Categories" class="Categories">
-            <!-- Categories and kinks will be dynamically populated here -->
-        </div>
-        <button id="ExportBtn">Export as Image</button>
-    </div>
-    <div id="Sheet" style="display: none;">
-        <!-- Placeholder for the generated roleplaying sheet -->
-    </div>
+    <div id="Categories"></div>
+
+    <button id="ExportBtn">Export as Image</button>
+
+    <div id="Sheet"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
     <script src="kinksheets.js"></script>
