--- a/kinksheets.html
+++ b/kinksheets.html
@@ -15,6 +15,6 @@
     <div id="ExportedImage" class="exported-image-container"></div>
 
     <script src="kinksheets.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
 </body>
 </html>
